docs-updated index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>HEY! am kotesh</h1>
+    <p>an Art-passionate started my journey to become a web developer, with skills and their's execution that make sense...</p>
 </body>
 </html>
