docs-name-exchange

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Student-site2</title>
 </head>
 <body>
-    <h1>HEY! am kotesh</h1>
+    <h1>HEY! am Kotesh Arya</h1>
     <p>an Art-passionate started my journey to become a web developer, with skills and their's execution that make sense...</p>
 </body>
 </html>
