Update details of project

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>HEY! am Kotesh Arya</h1>
     <p>an Art-passionate started my journey to become a web developer, with skills and their's execution that make sense...</p>
+    <p>I've started this by working on few CLI apps, which i am showcasing them below</p>
 </body>
 </html>
