--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>HEY! am Kotesh Arya</h1>
     <p>an Art-passionate started my journey to become a web developer, with skills and their's execution that make sense...</p>
     <p>I've started this by working on few CLI apps, which i am showcasing them below</p>
+    <p>something more about me</p>
+    <p>fav avenger is THOR</p>
+    <p>fav colour is  BLUE</p>
+
 </body>
 </html>
